kubernetes/apps/home-automation/friday-blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-on-friday-blog
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-on-friday-blog
  template:
    metadata:
      labels:
        app: deploy-on-friday-blog
        nfsMount: "true"
    spec:
      containers:
        - name: deploy-on-friday-blog
          # command: [ "tail", "-f", "/dev/null" ]
          image: ghcr.io/bokker/tnorbert-blog:1.0.164 # {"$imagepolicy": "home-automation:deploy-on-friday-blog"}
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - mountPath: /home/node/app/public/media
              subPath: deploy-on-friday-blog
              name: unraid-storage
            - mountPath: /home/node/app/.next
              subPath: deploy-on-friday-blog-build
              name: unraid-storage
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: unraid-storage
          persistentVolumeClaim:
            claimName: unraid-un-nvme-pvc
