kubernetes/apps/home-automation/friday-blog/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deploy-on-friday-blog
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      name: web-ui
      targetPort: 3000
  selector:
    app: deploy-on-friday-blog
