kubernetes/apps/home-automation/friday-blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: tnorbert-blog-external
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.deploy-on-friday.com"
spec:
  ingressClassName: external
  rules:
  - host: deploy-on-friday.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tnorbert-blog
            port:
              number: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: tnorbert-blog-external-second
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.tnorbert.com"
spec:
  ingressClassName: external
  rules:
  - host: tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tnorbert-blog
            port:
              number: 3000
